<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.starwarscharacters.ui.viewModel.MainViewModel" />

        <variable
            name="itemType"
            type="com.example.starwarscharacters.data.model.ItemType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.99" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.01" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.99" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginVertical="@dimen/margin_small"
            app:cardCornerRadius="@dimen/search_view_radius"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/teal_400"
            app:strokeWidth="1dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_extra_small"
                    app:chipBackgroundColor="?colorSecondaryVariant"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCharacters"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="@{() -> viewModel.runFilter(itemType.CHARACTER)}"
                        android:text="@string/character"
                        android:textAlignment="center"
                        app:checkedIcon="@drawable/ic_characters"
                        app:checkedIconTint="?color"
                        app:chipIconTint="?color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/races"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.runFilter(itemType.RACE)}"
                        android:text="@string/race"
                        android:textAlignment="center"
                        app:checkedIcon="@drawable/ic_species"
                        app:checkedIconTint="?color"
                        app:chipIconTint="?color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/starships"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.runFilter(itemType.STARSHIP)}"
                        android:text="@string/starships"
                        android:textAlignment="center"
                        app:checkedIcon="@drawable/ic_starships"
                        app:checkedIconTint="?color"
                        app:chipIconTint="?color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/planets"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.runFilter(itemType.PLANET)}"
                        android:text="@string/planets"
                        android:textAlignment="center"
                        app:checkedIcon="@drawable/ic_planets"
                        app:checkedIconTint="?color"
                        app:chipIconTint="?color" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

        </com.google.android.material.card.MaterialCardView>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/filter">

            <androidx.recyclerview.widget.RecyclerView
                android:layoutAnimation="@anim/layout_animation"
                android:id="@+id/rvList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:listData="@{viewModel.items}"
                tools:listitem="@layout/item_row" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <!-- app:layout_constraintTop_toBottomOf="@+id/mcv_search_view" -->

        <ProgressBar
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>