<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_normal">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <View
                android:layout_width="50dp"
                android:layout_height="@dimen/margin_small"
                android:layout_gravity="center"
                android:background="@drawable/square_grey" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/contentToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coordinator"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/my_galactic_league"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="?colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentToolbar"
            app:layout_constraintVertical_bias="0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contentToolbar"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            app:layout_constraintVertical_bias="0.0">

            <!-- Races -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/racesContainer"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0">

                <TextView
                    android:id="@+id/races"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/race"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/hRaces"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintRight_toLeftOf="@+id/hRaces"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <HorizontalScrollView
                    android:id="@+id/hRaces"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintLeft_toRightOf="@+id/races"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupRaces"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:padding="@dimen/margin_extra_small" />

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Characters -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/charactersContainer"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/racesContainer"
                app:layout_constraintVertical_bias="0">

                <TextView
                    android:id="@+id/characters"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/character"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/hCharacters"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintRight_toLeftOf="@+id/hCharacters"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <HorizontalScrollView
                    android:id="@+id/hCharacters"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintLeft_toRightOf="@+id/characters"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupCharacters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:padding="@dimen/margin_extra_small" />

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Starships -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/starshipsContainer"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/charactersContainer"
                app:layout_constraintVertical_bias="0">

                <TextView
                    android:id="@+id/starships"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/starships"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/hStarships"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintRight_toLeftOf="@+id/hStarships"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0" />

                <HorizontalScrollView
                    android:id="@+id/hStarships"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintLeft_toRightOf="@+id/starships"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupStarships"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:padding="@dimen/margin_extra_small" />

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- Planets -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/planetsContainer"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/starshipsContainer"
                app:layout_constraintVertical_bias="0">

                <TextView
                    android:id="@+id/planets"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/planets"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/hPlanets"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintRight_toLeftOf="@+id/hPlanets"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0" />

                <HorizontalScrollView
                    android:id="@+id/hPlanets"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintLeft_toRightOf="@+id/planets"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupPlanets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:padding="@dimen/margin_extra_small" />

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createLeague"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/green"
            android:text="@string/create_league"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentMain" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>